# internal/handler/http/api/v1/anime/response/scrape.go
@@ -10,23 +10,27 @@ type ScrapeResponse struct {
 	Image       string  `json:"image"`
 	Title       string  `json:"title"`
 	Status      string  `json:"status"`
+	Type        string  `json:"type"`
 	Episodes    string  `json:"episodes"`
 	Genres      []Entry `json:"genres"`
 	VoiceActing []Entry `json:"voiceActing"`
 	Synonyms    []Entry `json:"synonyms"`
 	Rating      float32 `json:"rating"`
+	Year        int     `json:"year"`
 }
 
 func NewScrapeResponse(anime entity.Anime) ScrapeResponse {
 	return ScrapeResponse{
 		Image:       anime.Image,
 		Title:       anime.Title,
-		Status:      anime.Status,
+		Status:      string(anime.Status),
 		Episodes:    anime.Episodes,
 		Genres:      mapToEntries(anime.Genres),
 		VoiceActing: mapToEntries(anime.VoiceActing),
 		Synonyms:    mapToEntries(anime.Synonyms),
 		Rating:      anime.Rating,
+		Year:        anime.Year,
+		Type:        string(anime.Type),
 	}
 }
 
